Ajustes no Texto

--- a/Mvc/Views/Home/Index.cshtml
+++ b/Mvc/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
     <h1>EnqueteWeb</h1>
-    <h2>Você teria coragem de fazer uma viagem sme volta para Marte ?</h2>
+    <h2>Você teria coragem de fazer uma viagem sem volta para Marte ?</h2>
     <p>
         <a asp-action="Responder" class="btn btn-primary">Responder Agora!</a>
         <a asp-action="Resultado" class="btn btn-primary">Ver Resultador Parciais</a>
