--- a/Mvc/Views/Home/Responder.cshtml
+++ b/Mvc/Views/Home/Responder.cshtml
@@ -12,11 +12,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="offset-3 coll-6">
-    <h1>EquanteWeb!</h1>
-    <h2>Você teria coragem de fazer uma viagem sme volta para Marte ?</h2>
-    <h4>Preencha os campos e maruqe sua resposta.</h4>
+    <h1>EnqueteWeb!</h1>
+    <h2>Você teria coragem de fazer uma viagem sem volta para Marte ?</h2>
+    <h4>Preencha os campos e marque sua resposta.</h4>
     <div asp-validation-summary="All"></div>
     <form method="POST">
         <div>
